Fix tab dragging in unity2d

Unity 2d creates non-rectangled or 'shaped' X11 windows. These windows have a
big bounding box according to XGetGeometry but should actually only interact
with part of the screen, which confuses the tab strip dragging code. This
checks if a point is actually inside the ShapeInput list when this extension
is supported by the X display

BUG=114985


Review URL: https://chromiumcodereview.appspot.com/10990010

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@159111 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4e62b3d0ac881be70f5dca51ffc249522d0db7ab